# RPGLootFeed

./: .gitignore  .luacov  .pkgmeta  .releaserc.json  ATTRIBUTIONS  AddonScope.lua  CONTRIBUTING.md  ConfigOptions.lua  Core.lua  CurrencyInfoMembers.md  DoubleLinkedList.lua  DynamicPropertyTable.lua  LICENSE  Logger.lua  LootDisplay.lua  LootDisplayFrame.lua  LootDisplayFrame.xml  LootDisplayProfiler.lua  LootDisplayRow.lua  LootDisplayRowTemplate.xml  LootInfo.lua  Makefile  Queue.lua  README.BB  README.md  RPGLootFeed.lua  RPGLootFeed.toc  SmokeTest.lua  TestMode.lua  TestModeData.lua  _global_types.lua  _lib_gui_types.lua  _lib_types.lua  embeds.xml  local_dev.ps1  package-lock.json  package.json  pyproject.toml  rpglootfeed-1-1.rockspec  rpglootfeed-dev-1.rockspec
.github/: FUNDING.yml
.release/: local  local.sh
.scripts/: check_for_invalid_prints.py  check_for_missing_locale_keys.py  create_or_update_i18n_issues.py  get_wowhead_hidden_currencies.py  hardcode_string_check.py  missing_translation_check.py  organize_translations.py  post-pkg-comment.cjs  release.js
.trunk/: trunk.yaml
BlizzOverrides/: BossBanner.lua  LootToasts.lua  MoneyAlerts.lua  overrides.xml
Features/: Currency.lua  Experience.lua  ItemLoot.lua  LootDisplayProperties.lua  Money.lua  Professions.lua  Reputation.lua  features.xml
GameTesting/: IntegrationTest.lua  SmokeTest.lua  TestMode.lua  testing.xml
Icons/: logo.blp
LootDisplay/: LootDisplay.lua  LootDisplay.xml
LootDisplayFrame/: LootDisplayFrame.lua  LootDisplayFrame.xml
RPGLootFeed/: .pkgmeta  Core.lua  RPGLootFeed.toc  (+2 more)
(+297 files in other folders)
