[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
idna = "3.8"
requests = "2.32.4"
urllib3 = "2.5.0"
defusedxml = "^0.7.1"
playwright = "^1.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
